--- a/src/styles.css
+++ b/src/styles.css
@@ -41,3 +41,17 @@ button:hover {
   margin: 8px;
   border-radius: 8px;
 }
+.title {
+  text-align: center;
+  margin-top: 0;
+  font-weight: bold;
+  color: #666;
+}
+.list-row {
+  display: flex;
+  align-items: center;
+  padding-bottom: 4px;
+}
+.todo {
+  margin-right: 8px;
+}
